...
    <ImageView
        android:contentDescription="@string/headerImage"
        android:id="@+id/imageHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        app:srcCompat="@drawable/logodreagadoinicio"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.v7.widget.RecyclerView
...
        app:layout_constraintStart_toStartOf="@id/imageHeader"
        app:layout_constraintTop_toBottomOf="@+id/imageHeader">

    </android.support.v7.widget.RecyclerView>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="569dp"
        android:layout_gravity="end|end"
        android:layout_margin="@dimen/_16sdp"
        android:backgroundTint="#0F28CF"
        android:src="@drawable/menu"
...
