...
    android:layout_height="match_parent"
    tools:context=".inicioSesion"
    tools:targetApi="16">


    <Button
        android:id="@+id/IniciarFormBut"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:background="@drawable/botonlogininicio"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="15sp"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="78dp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/correo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:fontFamily="@font/gothamlight"
        android:hint="@string/emailHint"
...
