...
    <string name="courseTitle">titulo del curso</string>
    <string name="contentDescriptionCardView">imagen del curso a ver</string>
    <string name="headerImage">header</string>
    <string name="courseTitleExplain">Titulo del curso</string>
    <string name="courseExplainExplain">Descripcion</string>
    <string name="categoriaCourseExplain">Categoria</string>
    <string name="goTo">Ir al curso</string>
    <string name="space" />
    <string name="Reward">Rewards</string>
    <string name="buyNow">confirmar compra</string>
    <string name="HomeNavBar">Home</string>
    <string name="storeNavBar">Store</string>
    <string name="MarathonNavBar">Marathon</string>
...
